--- a/index.html
+++ b/index.html
@@ -119,6 +119,6 @@
 </head>
 <body id="main-body">
     <div id="root"></div>
-    <script type=“module” src=“/index.tsx”> </script>
+    <script type="module" src="/index.tsx"> </script>
 </body>
 </html>
