--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
           100% { transform: translateY(-100vh) translateX(30px); opacity: 0; }
         }
 
+        /* 边框流光旋转动画 */
+        @keyframes border-flow {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* 地图边界呼吸发光 */
+        @keyframes boundary-pulse {
+            0%, 100% { filter: drop-shadow(0 0 2px #22d3ee); opacity: 0.5; stroke-width: 3; }
+            50% { filter: drop-shadow(0 0 12px #22d3ee); opacity: 1; stroke-width: 5; }
+        }
+
         /* 科技风格滚动条重构 */
         .tech-scrollbar::-webkit-scrollbar {
             width: 6px;
@@ -86,15 +99,14 @@
           color: #f1f5f9; 
         }
 
-        /* 针对高德极夜版瓦片的科技感微调 */
+        /* 针对 OSM 浅色瓦片的深蓝色科技滤镜 */
         .tech-map-theme .leaflet-tile-pane {
-            /* 不再需要 invert，因为高德极夜版原生就是深色 */
-            filter: brightness(0.8) contrast(1.3) saturate(1.8) hue-rotate(-15deg);
+            filter: invert(100%) hue-rotate(180deg) brightness(0.65) contrast(1.2) saturate(1.4);
             transition: filter 1s ease;
         }
         
         .day-map-theme .leaflet-tile-pane {
-            filter: saturate(1.1) contrast(1.1);
+            filter: saturate(0.8) contrast(1.1);
             transition: filter 1s ease;
         }
         
@@ -103,6 +115,12 @@
         .glow-text { 
             color: #fff;
             text-shadow: 0 0 15px rgba(34, 211, 238, 0.8); 
+        }
+
+        /* 赋予 Leaflet 路径动态发光类 */
+        .animated-boundary {
+            animation: boundary-pulse 4s infinite ease-in-out;
+            pointer-events: none;
         }
     </style>
 <script type="importmap">
@@ -119,7 +137,6 @@
 </script>
 </head>
 <body id="main-body">
-    <script type="module" src="/index.tsx"></script>
     <div id="root"></div>
 </body>
 </html>
