--- a/index.html
+++ b/index.html
@@ -138,5 +138,6 @@
 </head>
 <body id="main-body">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
