--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 </script>
 </head>
 <body id="main-body">
+    <script type="module" src="/index.tsx"></script>
     <div id="root"></div>
 </body>
 </html>
