feat: Restructure dashboard components and update titles
Refactored the main App component to remove `IntelligenceBoard` and `PoliceCalendarBoard`, and introduced `PublicOpinionBoard` and a re-integrated `IncidentBoard`.

Updated the title in `CommandActionBoard.tsx` from "指挥行动 · 实时指控" to "指挥处突 · 双长盯办" for better semantic accuracy.

Modified `DoubleLeaderBoard.tsx` to display "Risk Alerts" and "Abnormal Movements" instead of the previous "Instructions" and "Closed Loop" data, reflecting a shift towards real-time incident tracking.

Added a `CalendarOverlay` component and integrated it into the `Header` component to allow for calendar interaction.

Updated the AI Studio app link in the README.md.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,41 @@
         @keyframes rotate-slow { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
         @keyframes shimmer { 0% { transform: translateX(-100%); } 100% { transform: translateX(100%); } }
         
+        /* 撒点脉冲动画 */
+        @keyframes scatter-pulse {
+            0% { transform: scale(1); opacity: 0.8; }
+            100% { transform: scale(3.5); opacity: 0; }
+        }
+
+        .pulse-marker {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background: currentColor;
+            box-shadow: 0 0 10px currentColor;
+            position: relative;
+        }
+
+        .pulse-marker::after {
+            content: '';
+            position: absolute;
+            inset: -4px;
+            border-radius: 50%;
+            border: 2px solid currentColor;
+            animation: scatter-pulse 2s infinite ease-out;
+            pointer-events: none;
+        }
+
+        .pulse-marker::before {
+            content: '';
+            position: absolute;
+            inset: -4px;
+            border-radius: 50%;
+            border: 1px solid currentColor;
+            animation: scatter-pulse 2s infinite ease-out 0.6s;
+            pointer-events: none;
+        }
+
         .tech-scrollbar::-webkit-scrollbar { width: 6px; height: 6px; }
         .tech-scrollbar::-webkit-scrollbar-track { background: rgba(34, 211, 238, 0.03); border-radius: 10px; margin: 4px; }
         .tech-scrollbar::-webkit-scrollbar-thumb {
@@ -29,9 +64,17 @@
             border: 1px solid rgba(34, 211, 238, 0.25);
             backdrop-filter: blur(30px);
             box-shadow: 0 12px 40px rgba(0, 0, 0, 0.6);
+            transition: all 0.5s ease;
         }
 
-        .tech-module-corner { position: absolute; width: 12px; height: 12px; border: 2px solid #22d3ee; z-index: 10; }
+        .day-mode .tech-module-container {
+            background: rgba(255, 255, 255, 0.85);
+            border: 1px solid rgba(14, 165, 233, 0.15);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+        }
+
+        .tech-module-corner { position: absolute; width: 12px; height: 12px; border: 2px solid #22d3ee; z-index: 10; transition: border-color 0.5s ease; }
+        .day-mode .tech-module-corner { border-color: #0ea5e9; }
         .corner-tl { top: -1px; left: -1px; border-right: none; border-bottom: none; }
         .corner-tr { top: -1px; right: -1px; border-left: none; border-bottom: none; }
         .corner-bl { bottom: -1px; left: -1px; border-right: none; border-top: none; }
@@ -39,8 +82,10 @@
 
         .digital-font { font-family: 'Orbitron', sans-serif; letter-spacing: 1px; }
         
-        body { background: #020617; margin: 0; overflow: hidden; font-family: 'PingFang SC', 'Microsoft YaHei', sans-serif; color: #f1f5f9; }
-        .glow-text { color: #fff; text-shadow: 0 0 15px rgba(34, 211, 238, 0.8); }
+        body { background: #020617; margin: 0; overflow: hidden; font-family: 'PingFang SC', 'Microsoft YaHei', sans-serif; color: #f1f5f9; transition: background 0.5s ease, color 0.5s ease; }
+        .day-mode { background: #f8fafc; color: #1e293b; }
+        .glow-text { color: #fff; text-shadow: 0 0 15px rgba(34, 211, 238, 0.8); transition: all 0.5s ease; }
+        .day-mode .glow-text { color: #0f172a; text-shadow: none; }
 
         /* Leaflet 容器与滤镜优化 */
         .leaflet-container { 
@@ -86,9 +131,10 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body id="main-body">
-    <script type="module" src="/index.tsx"></script>
     <div id="root"></div>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
